# Claude

./: .gitignore  codemagic.yaml  sms_send.php
.claude/: launch.json  settings.json
docs/: ios-deployment-guide.md  myline-platform-deployment-guide.md  whatsapp-deployment-guide.md
dsiprouter-deploy/: voip-push.service  voip_push_server.py
fusionpbx-deploy/app/sms/: index.lua
fusionpbx-deploy/app/whatsapp/: extension_map.conf.example  send.php  webhook.php
fusionpbx-deploy/nginx/: whatsapp-webhook.conf
softphone/: MyLineSoftphone.spec  PySoftphone.spec  build.py  config.py  main.py  requirements.txt
softphone-android/: build.gradle.kts  gradle.properties  settings.gradle.kts  setup_g729.bat  setup_g729.sh
softphone-android/app/: build.gradle.kts  proguard-rules.pro
softphone-android/app/src/main/cpp/: CMakeLists.txt  g729_jni.c
softphone-android/app/src/main/cpp/bcg729/: README.md
softphone-ios/: .gitignore  README.md  project.yml
softphone-ios/MyLineSoftphone/: BCG729-Bridging-Header.h  ContentView.swift  Info.plist  MyLineSoftphoneApp.swift
softphone-ios/MyLineSoftphone/Audio/: DtmfPlayer.swift
softphone-ios/MyLineSoftphone/Codecs/: g729_wrapper.c  (+1 more)
softphone/.claude/: settings.json
softphone/gui/: blf_panel.py  call_history.py  contacts_panel.py  dialpad.py  in_call_view.py  main_window.py  messages_panel.py  notification_toast.py  settings_dialog.py  theme.py
softphone/models/: blf_entry.py  call_record.py  chat_message.py  contact.py
softphone/protocols/: base.py  iax_handler.py  sip_handler.py
softphone/utils/: database.py
(+67 files in other folders)
